tests/snapshots/generator__duplicate_create_files@_exact_bytes_100000_exact_1_1_1000.snap
---
source: tests/generator.rs
expression: "&golden"
---
Exactly 1 file will be generated in approximately 1 directory distributed across a tree of maximum depth 1 where each directory contains approximately 1 other directory. Each file will contain approximately 100,000 bytes of random data totaling exactly 100000 bytes.
Created 1 file (100.0 kB) across 0 directories.

/0

0x600c0afd8f5714db
